# aws-ec2-knownhosts

./: .gitignore  README.md  aws-ec2-knownhosts.cabal  flake.nix  fourmolu.yaml  hie.yaml  stack.yaml
.github/workflows/: test.yaml
exec/aws-ec2-keysync/: Main.hs
exec/aws-ec2-knownhosts/: Main.hs
exec/aws-ec2-pubkeys/: Main.hs
src/AWS/: KnownHosts.hs  PubKeys.hs  Types.hs
