name:                aws-ec2-knownhosts
version:             0.1.0.0
synopsis:            Capture and manage AWS EC2 known_host pubkeys
description:         Capture and manage AWS EC2 known_host pubkeys via the AWS API command line tool.
license:             BSD3
license-file:        LICENSE
author:              Luke Hoersten
maintainer:          luke@bitnomial.com, opensource@bitnomial.com
copyright:           Bitnomial, Inc. (c) 2015
category:            AWS, Network
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://github.com/bitnomial/aws-ec2-knownhosts
bug-reports:         http://github.com/bitnomial/aws-ec2-knownhosts/issues


library
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -rtsopts

  exposed-modules: AWS.KnownHosts
                 , AWS.PubKeys
                 , AWS.Types

  build-depends: base        >= 4.7   && < 5
               , aeson       >= 2.0   && < 2.3
               , async       >= 2.0   && < 2.3
               , attoparsec  >= 0.12  && < 0.15
               , bytestring  >= 0.10  && < 0.13
               , directory   >= 1.2   && < 1.4
               , filepath    >= 1.4   && < 1.6
               , io-streams  >= 1.3.4 && < 1.6
               , process     >= 1.4   && < 1.7
               , text        >= 2.0   && < 2.3


executable aws-ec2-pubkeys
  main-is:           Main.hs
  hs-source-dirs:    exec/aws-ec2-pubkeys/
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -rtsopts

  build-depends: base                 >= 4.7  && < 5
               , aws-ec2-knownhosts
               , io-streams           >= 1.1  && < 1.6
               , optparse-applicative >= 0.16 && < 0.19
               , text                 >= 2.0  && < 2.3


executable aws-ec2-knownhosts
  main-is:           Main.hs
  hs-source-dirs:    exec/aws-ec2-knownhosts/
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -rtsopts

  build-depends: base                 >= 4.7  && < 5
               , aeson                >= 2.2  && < 2.3
               , attoparsec-aeson     >= 2.2  && < 2.3
               , aws-ec2-knownhosts
               , io-streams           >= 1.1  && < 1.6
               , optparse-applicative >= 0.16 && < 0.19


executable aws-ec2-keysync
  main-is:           Main.hs
  hs-source-dirs:    exec/aws-ec2-keysync/
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2 -rtsopts

  build-depends: base                 >= 4.7  && < 5
               , aeson                >= 2.2  && < 2.3
               , attoparsec-aeson     >= 2.2  && < 2.3
               , aws-ec2-knownhosts
               , io-streams           >= 1.1  && < 1.6
               , text                 >= 2.0  && < 2.3
               , optparse-applicative >= 0.16 && < 0.19
               , directory            >= 1.3  && < 1.4
               , unix-compat          >= 0.4  && < 0.8
               , process              >= 1.0  && < 1.7
